--- a/server/src/main/webapp/WEB-INF/rails/app/assets/stylesheets/css_sass/global/_layout.scss
+++ b/server/src/main/webapp/WEB-INF/rails/app/assets/stylesheets/css_sass/global/_layout.scss
@@ -13,121 +13,125 @@
  * See the License for the specific language governing permissions and
  * limitations under the License.
  */
+
 /*
  * layout
  */
 
 body {
-    background-color: #333;
-    color: #333;
-    font-family: Arial, Helvetica, sans-serif;
-    font-size: 11px;
+  background-color: #333;
+  color: #333;
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 11px;
 }
 
 #body_content {
-    padding-top:91px;
-    background-color: #ffffff;
+  padding-top: 91px;
+  background-color: #fff;
 }
 
-#pipelines{
-     h2.entity_title{
-        border: 0 none;
-        margin-bottom: 0;
-    }
+#pipelines {
+  h2.entity_title {
+    border: 0 none;
+    margin-bottom: 0;
+  }
 
-    .content_wrapper_inner {
-        border-bottom: 1px dotted #888;
-        margin-left: 15px;
-        margin-right: 15px;
+  .content_wrapper_inner {
+    border-bottom: 1px dotted #888;
+    margin-left: 15px;
+    margin-right: 15px;
+    padding-bottom: 5px; /* compensate for bottom margin of pipeline */
+    padding-top: 10px;
+    padding-left: 0;
+    padding-right: 0;
+  }
 
-        padding-bottom: 5px; /* compensate for bottom margin of pipeline */
-        padding-top: 10px;
-        padding-left: 0;
-        padding-right: 0;
-    }
-    #body_content{
-        background-color: #eeeeee;
-    }
+  #body_content {
+    background-color: #eee;
+  }
 
-    #body_content .content_wrapper_inner {
-      padding: 15px;
-      margin: 0;
-    }
-    #body_content.admin_body_content{
-        background-color: white !important;
-    }
+  #body_content .content_wrapper_inner {
+    padding: 15px;
+    margin: 0;
+  }
 
-    #MB_content{
-      #body_content {
-        background: #fff;
-      }
+  #body_content.admin_body_content {
+    background-color: white !important;
+  }
+
+  #MB_content {
+    #body_content {
+      background: #fff;
     }
+  }
 }
 
 .content_wrapper_inner {
-    border: 0;
-    padding: 15px;
+  border: 0;
+  padding: 15px;
 }
 
 /*
  * Footer
  */
 
-/*todo: refactoring of below classes*/
+/* todo: refactoring of below classes */
 #footer {
-    background-color: transparent;
-    text-align: right;
-    color: #BBB !important;
-    margin: 0 15px;
-    padding: 10px 0 35px 0;
-    border-top: 1px solid #333;
+  background-color: transparent;
+  text-align: right;
+  color: #bbb !important;
+  margin: 0 15px;
+  padding: 10px 0 35px 0;
+  border-top: 1px solid #333;
 
-    a {
-        color: #fff;
+  a {
+    color: #fff;
+  }
+
+  ul li {
+    display: inline;
+    padding: 0 0.5em;
+    color: #bbb !important;
+    border-right: 1px dotted #ccc;
+  }
+
+  ul {
+    li.last {
+      border: 0 none !important;
     }
+  }
 
-    ul li {
-        display: inline;
-        padding: 0 .5em;
-        color: #BBB !important;
-        border-right: 1px dotted #ccc;
+  ul li,
+  ul li a,
+  ul li span {
+    font-size: 11px !important;
+  }
+
+  .copyright {
+    float: left;
+  }
+
+  ul.links {
+    float: right;
+  }
+
+  #copyright {
+    font-size: 0.9em;
+    clear: both;
+    color: #1f2314;
+    width: 20em;
+    padding-left: 2em;
+    float: left;
+
+    a,
+    a:visited {
+      color: #1f2314;
     }
-
-    ul{
-        li.last{
-            border:0 none !important;
-        }
-    }
-
-    ul li, ul li a, ul li span {
-        font-size: 11px !important
-    }
-
-    .copyright{
-        float:left;
-    }
-
-    ul.links {
-        float: right;
-    }
-
-    #copyright {
-        font-size: 0.9em;
-        clear: both;
-        color: #1f2314;
-        width: 20em;
-        padding-left: 2em;
-        float: left;
-
-        a, a:visited
-        {
-            color: #1f2314;
-        }
-    }
+  }
 }
 
 .form_submit_errors .errors {
-  background: image_url('g9/icons/icon_error_16.png') no-repeat scroll 0 0 #F8D1D8;
+  background: image_url("g9/icons/icon_error_16.png") no-repeat scroll 0 0 #f8d1d8;
   font-size: 12px;
   border-radius: 3px;
   overflow: auto;
@@ -135,9 +139,9 @@ body {
   -webkit-border-radius: 3px;
   background-position: 10px 9px !important;
   background-repeat: no-repeat;
-  border: 1px solid rgba(0, 0, 0, 0.1);
-  color: #333333;
-  margin: 10px 0px 10px 0px;
+  border: 1px solid rgba(0, 0, 0, 10%);
+  color: #333;
+  margin: 10px 0 10px 0;
   padding: 10px 10px 10px 36px;
 }
 
