--- a/server/src/main/webapp/WEB-INF/rails/app/assets/stylesheets/css_sass/global/_typography.scss
+++ b/server/src/main/webapp/WEB-INF/rails/app/assets/stylesheets/css_sass/global/_typography.scss
@@ -13,9 +13,11 @@
  * See the License for the specific language governing permissions and
  * limitations under the License.
  */
-pre, code ,.code {
-    font-family: consolas, monaco, courier;
-    color: #333;
-    line-height: 20px;
-    font-size: 13px;
+pre,
+code,
+.code {
+  font-family: consolas, monaco, courier;
+  color: #333;
+  line-height: 20px;
+  font-size: 13px;
 }
