--- a/server/src/main/webapp/WEB-INF/rails/app/assets/stylesheets/patterns/_tables.scss
+++ b/server/src/main/webapp/WEB-INF/rails/app/assets/stylesheets/patterns/_tables.scss
@@ -13,10 +13,10 @@
  * See the License for the specific language governing permissions and
  * limitations under the License.
  */
+
 /**
  * Tables.css
  */
-
 
 /**
  * TABLE OF CONTENTS
@@ -27,60 +27,65 @@
  * != NEEDS MIGRATING
  */
 
-
 /**
  * =LIST_TABLE
 **/
 .list_table {
-  background: #FFF;
+  background: #fff;
   border: 1px solid #ccc;
   box-shadow: 0 0 5px #bbb;
-    -moz-box-shadow: 0 0 5px #BBB;
-    -webkit-box-shadow: 0 0 5px #BBB;
-  font-size:11px;
+  -moz-box-shadow: 0 0 5px #bbb;
+  -webkit-box-shadow: 0 0 5px #bbb;
+  font-size: 11px;
   width: 100%;
 }
+
 .list_table th,
 .list_table td {
   padding: 8px 10px;
 }
+
 .list_table th {
-  background: #EEE image_url('g9/backgrounds/overlay_gradient_th.png') repeat-x;
-  border-bottom: 1px solid #DDD;
-  white-space:nowrap;
+  background: #eee image_url("g9/backgrounds/overlay_gradient_th.png") repeat-x;
+  border-bottom: 1px solid #ddd;
+  white-space: nowrap;
 }
+
 .list_table th a {
   color: #333;
 }
+
 .list_table td {
-  border-bottom: 1px dotted #DDD;
+  border-bottom: 1px dotted #ddd;
 }
+
 .list_table .Disabled {
   color: #999;
   font-style: italic;
 }
 
-
 /**
  * =SORTABLE TABLE
 **/
 .sortable_table th a.sorted_asc span {
-  background-image: image_url('g9/icons/icon_sorted_up.png');
+  background-image: image_url("g9/icons/icon_sorted_up.png");
 }
+
 .sortable_table th a.sorted_desc span {
-  background-image: image_url('g9/icons/icon_sorted_down.png');
+  background-image: image_url("g9/icons/icon_sorted_down.png");
 }
+
 .sortable_table th a span {
-  background-image: image_url('g9/icons/icon_sort_sortable.png');
+  background-image: image_url("g9/icons/icon_sort_sortable.png");
   background-position: right;
   background-repeat: no-repeat;
   display: inline-block;
   padding-right: 15px;
 }
-.sortable_table th a span:hover {
-  background-image: image_url('g9/icons/icon_sort_sortable_hover.png');
-}
 
+.sortable_table th a span:hover {
+  background-image: image_url("g9/icons/icon_sort_sortable_hover.png");
+}
 
 /**
  * =SELECTABLE_TABLE
@@ -90,12 +95,12 @@
   text-align: center;
 }
 
-
 /**
  * != NEEDS MIGRATING
 **/
 
-th.remove, th.actions {
+th.remove,
+th.actions {
   text-align: left;
   min-width: 110px;
 }
