--- a/server/src/main/webapp/WEB-INF/rails/app/assets/stylesheets/css/_pipeline-history.scss
+++ b/server/src/main/webapp/WEB-INF/rails/app/assets/stylesheets/css/_pipeline-history.scss
@@ -14,80 +14,65 @@
  * limitations under the License.
  */
 
-
 .passed-stage,
 .failed-stage,
 .failing-stage,
 .cancelled-stage,
-.building-stage
-{
-    background-image: image_url('icons-pipeline-history_new.png');
-    background-color: transparent;
-    background-repeat: no-repeat;
-    width: 82px;
-    height: 12px;
-    display: block;
-    position: relative;
-    cursor: default;
-    border-bottom: 25px solid #FFF; /* to increase target size */
-    /* for IE 6 */
+.building-stage {
+  background-image: image_url("icons-pipeline-history_new.png");
+  background-color: transparent;
+  background-repeat: no-repeat;
+  width: 82px;
+  height: 12px;
+  display: block;
+  position: relative;
+  cursor: default;
+  border-bottom: 25px solid #fff; /* to increase target size */
+
+  /* for IE 6 */
 }
-
-
-
-
-
-
 
 .popup {
-    width: 50em;
-    color: #FFF;
+  width: 50em;
+  color: #fff;
 }
 
-.popup td.last
-{
-    border-right: none;
+.popup td.last {
+  border-right: none;
 }
 
-.popup-open .popup
-{
-    display: block;
-    z-index: 5000;
+.popup-open .popup {
+  display: block;
+  z-index: 5000;
 }
 
-.popup-closed .popup
-{
-    display: none;
+.popup-closed .popup {
+  display: none;
 }
 
-a:link.pause-build-link
-a:hover.pause-build-link,
+a:link.pause-build-link a:hover.pause-build-link,
 a:active.pause-build-link {
-    background-position: -25px top;
+  background-position: -25px top;
 }
 
-a:link.unpause-build-link
-a:hover.unpause-build-link,
+a:link.unpause-build-link a:hover.unpause-build-link,
 a:active.unpause-build-link {
-    background-position: -25px -25px;
+  background-position: -25px -25px;
 }
 
 a.pause-build-link-disabled {
-    background-position: 0px -67px;
-    cursor:default;
+  background-position: 0 -67px;
+  cursor: default;
 }
 
 a.unpause-build-link-disabled {
-    background-position: 0px -166px;
-    cursor:default;
+  background-position: 0 -166px;
+  cursor: default;
 }
 
 #yui-main a.pause-build-link,
-#yui-main a.unpause-build-link
-{
-    height: 25px;
+#yui-main a.unpause-build-link {
+  height: 25px;
 }
-
-
 
 @import "../new-theme";
