--- a/server/src/main/webapp/WEB-INF/rails/app/assets/stylesheets/css/_stage-detail.scss
+++ b/server/src/main/webapp/WEB-INF/rails/app/assets/stylesheets/css/_stage-detail.scss
@@ -14,176 +14,167 @@
  * limitations under the License.
  */
 .files .directory,
-.files .opened_directory
-{
-    /*background-image: image_url('icon-build-plan-16.gif');*/
-    background-repeat: no-repeat;
-    padding-left: 20px;
-    margin-bottom: 1em;
+.files .opened_directory {
+  /* background-image: image_url('icon-build-plan-16.gif'); */
+  background-repeat: no-repeat;
+  padding-left: 20px;
+  margin-bottom: 1em;
 }
 
 .files .subdir-container .directory {
-    background-image: image_url('directory.gif');
+  background-image: image_url("directory.gif");
 }
 
 .files .subdir-container .opened_directory {
-    background-image: image_url('opened_directory.gif');
+  background-image: image_url("opened_directory.gif");
 }
 
 .files .subdir-container .opened_directory,
-.files .subdir-container .directory
-{
-    margin-bottom: 0.4em;
+.files .subdir-container .directory {
+  margin-bottom: 0.4em;
 }
 
 .stage-detail {
-    background: #FFF;
+  background: #fff;
 }
 
 #stage-detail-header {
-    margin: 0.7em;
+  margin: 0.7em;
 }
 
 .stage-detail-summary {
-    margin: 0;
-    padding: 0;
+  margin: 0;
+  padding: 0;
 }
 
 .stage-detail-summary .summary {
-    margin: 0.3em 1em 0 3.4em;
-    color: #FFF;
-    font-size: 0.9em;
+  margin: 0.3em 1em 0 3.4em;
+  color: #fff;
+  font-size: 0.9em;
 }
 
 .stage-detail-summary h3 {
-    font-size: 1.1em;
-    font-weight: bold;
-    padding: 0.2em 0.909em;
-    zoom: 1;
+  font-size: 1.1em;
+  font-weight: bold;
+  padding: 0.2em 0.909em;
+  zoom: 1;
 }
 
 .stage-detail-summary h3 .complete-time {
-    font-weight: normal;
+  font-weight: normal;
 }
 
-#stage-buildplans-histories
-{
-    padding: 0.7em 0.7em 0.7em 3em;
-    background-color: #FFF;
-    zoom: 1;
+#stage-buildplans-histories {
+  padding: 0.7em 0.7em 0.7em 3em;
+  background-color: #fff;
+  zoom: 1;
 }
 
 /* Stage status color */
 .stage-detail-status-failed,
 .stage-detail-status-failing,
-.stage-detail-status-cancelled
-{
-    background: #CD5447;
-    color: #FFF;
+.stage-detail-status-cancelled {
+  background: #cd5447;
+  color: #fff;
 }
 
 .stage-detail-status-passed {
-    background: #6CA62E;
-    color: #FFF;
+  background: #6ca62e;
+  color: #fff;
 }
 
 .stage-detail-status-unknown,
-.stage-detail-status-discontinued
-{
-    background: #EEEEEE;
-    color: #000;
+.stage-detail-status-discontinued {
+  background: #eee;
+  color: #000;
 }
 
 .stage-detail-status-building,
-.stage-detail-status-scheduled
-{
-    background: #ebc26d;
-    color: #000;
+.stage-detail-status-scheduled {
+  background: #ebc26d;
+  color: #000;
 }
 
 /* build status color */
 .build-plan-failed,
 .build-plan-failing,
-.build-plan-cancelled
-{
-    background-color: #FFCCCC;
+.build-plan-cancelled {
+  background-color: #fcc;
 }
 
 .build-plan-passed {
-    background-color: #E4F3D3;
+  background-color: #e4f3d3;
 }
 
 .build-plan-unknown,
-.build-plan-discontinued
-{
-    background-color: #ECE9D8;
+.build-plan-discontinued {
+  background-color: #ece9d8;
 }
 
 .build-plan-building,
-.build-plan-scheduled
-{
-    background-color: #ffe4c6;
+.build-plan-scheduled {
+  background-color: #ffe4c6;
 }
 
 /* stages list */
 .stages a {
-    display: block;
-    font-size: 1.1em;
-    padding: 0.3em 1.8em;
-    margin-bottom: 2px;
-    zoom: 1;
+  display: block;
+  font-size: 1.1em;
+  padding: 0.3em 1.8em;
+  margin-bottom: 2px;
+  zoom: 1;
 }
 
 .stages a:link,
 .stages a:visited {
-    color: black;
+  color: black;
 }
 
 .stages a:hover {
-    background-color: #fffdb9;
-    text-decoration: none;
+  background-color: #fffdb9;
+  text-decoration: none;
 }
 
 .build-plan-name {
-    font-weight: bold;
+  font-weight: bold;
 }
 
 #stage-sidebar {
-    display: none;
+  display: none;
 }
 
 ul.summary li {
-    line-height: 1.2em;
-    margin-bottom: 0.5em;
-    float: none;
+  line-height: 1.2em;
+  margin-bottom: 0.5em;
+  float: none;
 }
 
 .revision_revision_highlight-false {
-    font-weight:bold
+  font-weight: bold;
 }
 
 .revision_revision_highlight-true {
-    font-style: italic;
-    background-color: #F9F0B5
+  font-style: italic;
+  background-color: #f9f0b5;
 }
 
 #collapse-or-expand-builds-button {
-    background-image: image_url('icon_stage_twist.gif');
-    background-color:transparent;
-    background-repeat: no-repeat;
-    width: 23px;
-    text-indent: -10000px;
-    zoom: 1;
-    overflow: hidden;
-    border: none;
-    padding: 0;
-    cursor: pointer;
+  background-image: image_url("icon_stage_twist.gif");
+  background-color: transparent;
+  background-repeat: no-repeat;
+  width: 23px;
+  text-indent: -10000px;
+  zoom: 1;
+  overflow: hidden;
+  border: none;
+  padding: 0;
+  cursor: pointer;
 }
 
 .collapsed {
-    background-position: -3px 50%;
+  background-position: -3px 50%;
 }
 
 .expended {
-    background-position: -23px 50%;
+  background-position: -23px 50%;
 }
