--- a/server/src/main/webapp/WEB-INF/rails/app/assets/stylesheets/css/_sub_tab.scss
+++ b/server/src/main/webapp/WEB-INF/rails/app/assets/stylesheets/css/_sub_tab.scss
@@ -13,82 +13,82 @@
  * See the License for the specific language governing permissions and
  * limitations under the License.
  */
-/*- Menu Tabs B--------------------------- */
+
+/* - Menu Tabs B--------------------------- */
 .sub_tab_container_menu {
-    display: block;
-/* IE hack: remove the extra white space between tab & content */
-    zoom: 1;
+  display: block;
+
+  /* IE hack: remove the extra white space between tab & content */
+  zoom: 1;
 }
 
 .sub_tab_container {
 
 }
+
 .sub_tabs_container {
-    background: #D2D2D2;
+  background: #d2d2d2;
 }
+
 .sub_tabs_container {
-    list-style: none;
-    border-top: 1px solid #D2D2D2;
-    border-left: 1px solid #D2D2D2;
+  list-style: none;
+  border-top: 1px solid #d2d2d2;
+  border-left: 1px solid #d2d2d2;
 }
 
 .sub_tabs_container li {
-    display: block;
-    float: left;
-
+  display: block;
+  float: left;
 }
 
 .sub_tabs_container .current_tab {
-    background: white;
-    position: relative;
-    bottom: -1px;
+  background: white;
+  position: relative;
+  bottom: -1px;
 }
 
 /* To build the tabs we use the "sliding doors" method on an a tag and a span within the a */
 
-.sub_tabs_container a{
-    display: block;
-    padding: 0.3em 1em;
-    text-decoration: none;
-    white-space : nowrap;
-    font-size: 0.92em;
-    color: #333;
+.sub_tabs_container a {
+  display: block;
+  padding: 0.3em 1em;
+  text-decoration: none;
+  white-space: nowrap;
+  font-size: 0.92em;
+  color: #333;
 }
 
-.sub_tabs_container a{
-    cursor: pointer;
-    color: #150039;
-    text-decoration: none;
+.sub_tabs_container a {
+  cursor: pointer;
+  color: #150039;
+  text-decoration: none;
 }
 
 .sub_tabs_container a:hover,
 .sub_tabs_container a:active {
-    color: #584081;
+  color: #584081;
 }
 
 /* on hover display the over state of the tab - reposition background graphics to show the over portion */
 
 /* Mark currently selected tab */
 .sub_tabs_container .current_tab a {
-    font-weight: bold;
-    background: #FFF;
-    position: relative;
+  font-weight: bold;
+  background: #fff;
+  position: relative;
 }
 
 .sub_tab_container_content {
-    margin: 0;
-    padding: 0;
-    background: white;
-    min-height: 40em;
-    _height: 40em;
-    clear: both;
-    zoom: 1;
+  margin: 0;
+  padding: 0;
+  background: white;
+  min-height: 40em;
+  _height: 40em;
+  clear: both;
+  zoom: 1;
 }
 
 .sub_tab_container_content iframe {
-    min-height: 40em;
-    width: 99%;
+  min-height: 40em;
+  width: 99%;
 }
-
-
-
