--- a/server/src/main/webapp/WEB-INF/rails/app/assets/stylesheets/css_sass/gadgets/_dropdowns.scss
+++ b/server/src/main/webapp/WEB-INF/rails/app/assets/stylesheets/css_sass/gadgets/_dropdowns.scss
@@ -14,127 +14,136 @@
  * limitations under the License.
  */
 
-.enhanced_dropdown{
-    background-color: #FFF;
-    border: 1px solid #CCC;
-    border-bottom-color: #999;
-    border-right-color: #999;
-    box-shadow: 4px 4px 10px #CCC;
-    -moz-box-shadow: 4px 4px 10px rgba(0,0,0,0.3);
-    -webkit-box-shadow: 4px 4px 10px #CCC;
-    float: left;
-    left: auto;
-    overflow: visible;
-    position: absolute;
-    top: auto;
-    z-index: 2;
+.enhanced_dropdown {
+  background-color: #fff;
+  border: 1px solid #ccc;
+  border-bottom-color: #999;
+  border-right-color: #999;
+  box-shadow: 4px 4px 10px #ccc;
+  -moz-box-shadow: 4px 4px 10px rgba(0, 0, 0, 30%);
+  -webkit-box-shadow: 4px 4px 10px #ccc;
+  float: left;
+  left: auto;
+  overflow: visible;
+  position: absolute;
+  top: auto;
+  z-index: 2;
 }
-.enhanced_dropdown ul,.enhanced_dropdown {
-    min-width: 120px;
-    max-width: 185px;
+
+.enhanced_dropdown ul,
+.enhanced_dropdown {
+  min-width: 120px;
+  max-width: 185px;
 }
+
 .enhanced_dropdown li {
-    display: block;
-    float: none;
+  display: block;
+  float: none;
 
-    &:hover{
-        background-color:#FFEC80;
-        cursor:pointer;
-    }
+  &:hover {
+    background-color: #ffec80;
+    cursor: pointer;
+  }
 }
+
 .enhanced_dropdown li a {
-    color: #000;
-    display: block;
-    padding:5px;
+  color: #000;
+  display: block;
+  padding: 5px;
 }
-
 
 /**
  * ==INTERACTIONS
  */
 
 .enhanced_dropdown {
-    max-height: 30em;
+  max-height: 30em;
 }
 
 .enhanced_dropdown .scrollable_panel {
-    max-height: 17em;
-    overflow-x: hidden;
-    overflow-y: auto;
+  max-height: 17em;
+  overflow-x: hidden;
+  overflow-y: auto;
+}
 
+* + html .enhanced_dropdown .scrollable_panel {
+  height: expression(this.scrollheight >  204 ? "17em" : "auto");
 }
-*+html .enhanced_dropdown .scrollable_panel {
-    height: expression(this.scrollHeight >  204 ? "17em" : "auto");
+
+.enhanced_dropdown .scrollable_panel .selector_pipeline {
+  padding: 1em;
 }
-.enhanced_dropdown .scrollable_panel .selector_pipeline{
-    padding: 1em;
+
+.enhanced_dropdown .scrollable_panel .selectors {
+  padding: 0.7em;
 }
-.enhanced_dropdown .scrollable_panel .selectors{
-    padding: .7em;
-}
+
 .enhanced_dropdown .edit_panel {
-    border-bottom: 2px solid #000;
-    max-height: 16em;
-    overflow-y: auto;
-    padding: .5em;
-}
-.enhanced_dropdown .add_panel {
-    background: #EEEEE9 image_url('g9/backgrounds/overlay_modal_action_row.png') repeat-x;
-    border-top: 1px solid #CCC;
-    bottom: 0;
-    margin: 0;
-    padding: 10px 0;
-    text-align: left;
-    width: 100%;
-}
-.enhanced_dropdown .add_panel button.primary {
-    margin-left: 10px;
-    margin-right: 10px;
-    width: 100px;
-}
-*+html .enhanced_dropdown .add_panel .new_field{
-    margin-left: 4px;
-}
-.enhanced_dropdown a.lookup_icon {
-    background: image_url("g9/icon_search.png") transparent no-repeat right;
+  border-bottom: 2px solid #000;
+  max-height: 16em;
+  overflow-y: auto;
+  padding: 0.5em;
 }
 
+.enhanced_dropdown .add_panel {
+  background: #eeeee9 image_url("g9/backgrounds/overlay_modal_action_row.png") repeat-x;
+  border-top: 1px solid #ccc;
+  bottom: 0;
+  margin: 0;
+  padding: 10px 0;
+  text-align: left;
+  width: 100%;
+}
+
+.enhanced_dropdown .add_panel button.primary {
+  margin-left: 10px;
+  margin-right: 10px;
+  width: 100px;
+}
+
+* + html .enhanced_dropdown .add_panel .new_field {
+  margin-left: 4px;
+}
+
+.enhanced_dropdown a.lookup_icon {
+  background: image_url("g9/icon_search.png") transparent no-repeat right;
+}
 
 /**
  * ==MESSAGING
  */
 .enhanced_dropdown .loading {
-    background: image_url('spinner.gif') 50% 50% no-repeat transparent;
-    padding: 1em;
-}
-.enhanced_dropdown .error {
-    padding: 10px 10px 10px 25px;
+  background: image_url("spinner.gif") 50% 50% no-repeat transparent;
+  padding: 1em;
 }
 
+.enhanced_dropdown .error {
+  padding: 10px 10px 10px 25px;
+}
 
 /**
  * =SMARTFILL
 **/
 .smartfill_content {
-    background-color: #FFF;
-}
-.smartfill_content li{
-    background-color: #FFF;
-    cursor: pointer;
-    display: block;
-    padding: .25em;
-}
-.smartfill_content li.selected{
-    background-color: #FF9;
+  background-color: #fff;
 }
 
+.smartfill_content li {
+  background-color: #fff;
+  cursor: pointer;
+  display: block;
+  padding: 0.25em;
+}
 
+.smartfill_content li.selected {
+  background-color: #ff9;
+}
 
 /**
  * =!NEEDS MIGRATING
  */
-.pipeline_group .pipeline .actions .enhanced_dropdown{
-    max-width: 80%;
-    overflow-x: hidden;
-    overflow-y: auto;
+.pipeline_group .pipeline .actions .enhanced_dropdown {
+  max-width: 80%;
+  overflow-x: hidden;
+  overflow-y: auto;
 }
