--- a/server/src/main/webapp/WEB-INF/rails/app/assets/stylesheets/css_sass/go-pages/_admin.scss
+++ b/server/src/main/webapp/WEB-INF/rails/app/assets/stylesheets/css_sass/go-pages/_admin.scss
@@ -14,230 +14,246 @@
  * limitations under the License.
  */
 
-.new_form_content{
-    p.required{
-        margin-top: 30px;
-    }
+.new_form_content {
+  p.required {
+    margin-top: 30px;
+  }
 
-        .new_form_item{
-             margin-top: 10px;
+  .new_form_item {
+    margin-top: 10px;
 
-            .error_message{word-break: break-all;}
-            #check_package{margin-left: 0;}
+    .error_message { word-break: break-all; }
+    #check_package { margin-left: 0; }
 
-            .fieldWithErrors, &.fieldWithErrors,
-            .field_with_errors, &.field_with_errors{
-                input{
-                    float: none;
+    .fieldWithErrors,
+    &.fieldWithErrors,
+    .field_with_errors,
+    &.field_with_errors {
+      input {
+        float: none;
 
-                  &:focus{
-                    float: none;
-                  }
-                }
-            }
-
-          &.fieldWithErrors select,
-          &.field_with_errors select{
-               float: none;
-           }
-
-          .form_error{
-            display: inline-block;
-            float: none;
-            padding: 0;
-            margin:7px;
-          margin-bottom: 10px;
-          }
+        &:focus {
+          float: none;
         }
+      }
     }
 
-.vtop{
-  input,select{
+    &.fieldWithErrors select,
+    &.field_with_errors select {
+      float: none;
+    }
+
+    .form_error {
+      display: inline-block;
+      float: none;
+      padding: 0;
+      margin: 7px;
+      margin-bottom: 10px;
+    }
+  }
+}
+
+.vtop {
+  input,
+  select {
     vertical-align: top;
   }
 }
 
-.new_form_control{
-    display: table-cell;
+.new_form_control {
+  display: table-cell;
 }
 
-.new_form_label{
-    display: table-cell;
-    text-align: right;
-    padding-right: 10px;
-    width: 300px;
+.new_form_label {
+  display: table-cell;
+  text-align: right;
+  padding-right: 10px;
+  width: 300px;
 }
 
 #MB_content {
-  .new_form_label{
+  .new_form_label {
     width: 170px;
   }
-  .fieldset .form_item .form_item_block select{
+
+  .fieldset .form_item .form_item_block select {
     margin-bottom: 0;
   }
 }
 
+.new-admin-title {
+  padding-bottom: 10px;
+  margin-bottom: 20px;
+  font-size: 18px;
+  border-bottom: 1px solid #ccc;
 
-
-.new-admin-title{
-    padding-bottom: 10px;
-    margin-bottom: 20px;
-    font-size: 18px;
-    border-bottom: 1px solid #ccc;
-
-    .help{
+  .help {
     float: right;
     font-size: 0.6em;
     margin-top: 3px;
-    }
+  }
 }
 
-.new-admin-subtitle{
-    border-bottom: 2px solid #ccc;
-    margin-top:30px;
-    margin-bottom:20px;
+.new-admin-subtitle {
+  border-bottom: 2px solid #ccc;
+  margin-top: 30px;
+  margin-bottom: 20px;
 
-    span{
-      padding: 3px;
-      background-color: #f6f6f6;
-      font-size: 0.7em;
-      display: inline-block;
-      position: relative;
-      margin-top: 0px;
-      margin-left: 20px;
-      top: 10px;
-    }
-}
-
-.admin_holder{
-    background: none repeat scroll 0 0 #EEEEEE;
-    border-radius: 5px 5px 5px 5px;
-    padding: 5px;
-    margin-top: 10px;
-    border: 1px solid #ccc;
-}
-#content_area pre{
-    background: none repeat scroll 0 0 white;
-    padding: 10px;
-    white-space:pre-wrap;
-    border: 1px solid #ccc;
+  span {
+    padding: 3px;
+    background-color: #f6f6f6;
+    font-size: 0.7em;
+    display: inline-block;
+    position: relative;
+    margin-top: 0;
+    margin-left: 20px;
+    top: 10px;
+  }
 }
 
-#content_area .conflicted_content textarea{
-    float: right;
-    margin-top: 21px;
-    width: 40%;
+.admin_holder {
+  background: none repeat scroll 0 0 #eee;
+  border-radius: 5px 5px 5px 5px;
+  padding: 5px;
+  margin-top: 10px;
+  border: 1px solid #ccc;
 }
+
+#content_area pre {
+  background: none repeat scroll 0 0 white;
+  padding: 10px;
+  white-space: pre-wrap;
+  border: 1px solid #ccc;
+}
+
+#content_area .conflicted_content textarea {
+  float: right;
+  margin-top: 21px;
+  width: 40%;
+}
+
 .heading {
-    h2{
-        display: inline;
-    }
-    .label{
-        color: #999;
-    }
-    span{
-        float: right;
-        font-size: 1.1em;
-        margin-top: 2px;
-        white-space: nowrap;
-    }
+  h2 {
+    display: inline;
+  }
+
+  .label {
+    color: #999;
+  }
+
+  span {
+    float: right;
+    font-size: 1.1em;
+    margin-top: 2px;
+    white-space: nowrap;
+  }
 }
 
-#admin-holder-for-admin-config-source-xml pre ,#content_area textarea{
-    height:600px;
-    padding: 10px;
-    margin-bottom: 15px;
-    overflow: auto;
+#admin-holder-for-admin-config-source-xml pre,
+#content_area textarea {
+  height: 600px;
+  padding: 10px;
+  margin-bottom: 15px;
+  overflow: auto;
 }
+
 #admin-holder-for-admin-config-source-xml pre {
-    border: 1px solid #ccc;
-    margin-top: 5px;
+  border: 1px solid #ccc;
+  margin-top: 5px;
 }
-#content_area textarea{
-    height: 620px;
-    background-color:#fffacd;
+
+#content_area textarea {
+  height: 620px;
+  background-color: #fffacd;
 }
-#admin-holder-for-admin-config-source-xml .conflicted_content h3{
-    margin-top: 10px;
+
+#admin-holder-for-admin-config-source-xml .conflicted_content h3 {
+  margin-top: 10px;
 }
 
 #admin-holder-for-admin-config-source-xml .buttons-group > * {
-    min-width: 100px;
+  min-width: 100px;
 }
 
-/*start : added this class because ellipses*/
-#admin-holder-for-admin-config-source-xml .buttons-group{
+/* start : added this class because ellipses */
+#admin-holder-for-admin-config-source-xml .buttons-group {
+  #cancel_edit,
+  #save_config {
+    position: absolute;
+    margin-top: -20px;
+  }
 
-    #cancel_edit,#save_config{
-        position: absolute;
-        margin-top: -20px;
-    }
-    #cancel_edit{
-        margin-right: 24px;
-        right: 0;
-    }
-    #save_config{
-        right: 150px;
-    }
-    #edit_config{
-        margin-top: -18px;
-        position: absolute;
-        right: 21px;
-    }
-}
-/*end : added this class because ellipses*/
+  #cancel_edit {
+    margin-right: 24px;
+    right: 0;
+  }
 
+  #save_config {
+    right: 150px;
+  }
 
-.config_change_timestamp{
-    color: #999999;
-    font-size: 1.1em;
-    margin-right: 250px;
-    overflow: hidden;
-    padding-top: 5px;
-    text-overflow: ellipsis;
-    white-space: nowrap;
-    line-height: 16px;
+  #edit_config {
+    margin-top: -18px;
+    position: absolute;
+    right: 21px;
+  }
 }
 
-#config_editor_form #content_area{
-    clear: both;
+/* end : added this class because ellipses */
+
+.config_change_timestamp {
+  color: #999;
+  font-size: 1.1em;
+  margin-right: 250px;
+  overflow: hidden;
+  padding-top: 5px;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  line-height: 16px;
+}
+
+#config_editor_form #content_area {
+  clear: both;
 }
 
 .conflicted_content + .current_content {
-    #content_area,.buttons-group{
-        clear:none !important;
-        width: 48%;
-        padding: 10px 1% 0;
-        background-color: #eee;
-        float: right;
-    }
-}
-.conflicted_content + .current_content .buttons-group{
-    #cancel_edit,#save_config{
-        margin-top:-17px !important;
-    }
-    #cancel_edit{
-        margin-right:33px !important;
-    }
-    #save_config{
-        right:158px !important;
-    }
+  #content_area,
+  .buttons-group {
+    clear: none !important;
+    width: 48%;
+    padding: 10px 1% 0;
+    background-color: #eee;
+    float: right;
+  }
 }
 
-.conflicted_content{
-    width: 49%;
-    float: left;
+.conflicted_content + .current_content .buttons-group {
+  #cancel_edit,
+  #save_config {
+    margin-top: -17px !important;
+  }
 
-    pre{
-        white-space: pre-wrap;
-        margin-top: 21px !important;
-    }
+  #cancel_edit {
+    margin-right: 33px !important;
+  }
+
+  #save_config {
+    right: 158px !important;
+  }
+}
+
+.conflicted_content {
+  width: 49%;
+  float: left;
+
+  pre {
+    white-space: pre-wrap;
+    margin-top: 21px !important;
+  }
 }
 
 select#select_template {
-    float: left
+  float: left;
 }
 
-
-/*plugins*/
-
+/* plugins */
