--- a/server/src/main/webapp/WEB-INF/rails/app/assets/stylesheets/css_sass/go-pages/_pipeline.scss
+++ b/server/src/main/webapp/WEB-INF/rails/app/assets/stylesheets/css_sass/go-pages/_pipeline.scss
@@ -16,89 +16,92 @@
 @import "../base/mixins";
 
 .icon16 {
-  height:     16px;
-  width:      16px;
-  display:    inline-block;
-  background: image_url('andare/ico-16x16.png') no-repeat 0 0;
+  height: 16px;
+  width: 16px;
+  display: inline-block;
+  background: image_url("andare/ico-16x16.png") no-repeat 0 0;
 
   &.setting {
     background-position: 0 -211.5px;
-    float:               right;
-    padding-right:       4px;
+    float: right;
+    padding-right: 4px;
   }
+
   &.setting-left {
     background-position: 0 -211.5px;
-    float:               left;
-    padding-right:       5px;
+    float: left;
+    padding-right: 5px;
   }
 }
 
 .pipeline_bundle {
   .pipeline {
     background: #fff;
-    width:      245px;
-    float:      left;
-    padding:    15px;
+    width: 245px;
+    float: left;
+    padding: 15px;
     min-height: 190px;
-    overflow:   hidden;
-    margin:     0 10px 10px 0;
-    border:     1px solid #ccc;
+    overflow: hidden;
+    margin: 0 10px 10px 0;
+    border: 1px solid #ccc;
+
     @include rounded(5px);
     @include box-shadow(0, 0, 2px, #ccc);
 
     &:hover {
       @include box-shadow(0, 0, 3px, #bbb);
+
       border-color: #bbb;
     }
 
     .title {
-      -ms-word-wrap:  break-word;
+      -ms-word-wrap: break-word;
       -ms-word-break: break-all;
-      word-wrap:      break-word;
-      word-break:     break-all;
+      word-wrap: break-word;
+      word-break: break-all;
 
       .setting {
         float: right;
       }
     }
-
   }
-
 }
 
 .icon-pipeline {
-
   &.clear {
-    background: image_url('andare/nav-sprites-pipeline.png') no-repeat 1px 1px;
-    height:     14px;
-    width:      14px;
-    position:   absolute;
-    right:      15px;
-    padding:    2px;
-    top:        5px;
+    background: image_url("andare/nav-sprites-pipeline.png") no-repeat 1px 1px;
+    height: 14px;
+    width: 14px;
+    position: absolute;
+    right: 15px;
+    padding: 2px;
+    top: 5px;
+
     @include -go-opacity(0.4);
-    width:      14px;
+
+    width: 14px;
   }
+
   &:hover {
     @include -go-opacity(0.7);
   }
 }
 
-/* Pipeline Selector*/
+/* Pipeline Selector */
 #pipelines .pipelines_selector {
-  float:       right;
+  float: right;
   margin-left: 15px;
-  width:       380px;
+  width: 380px;
 
   .enhanced_dropdown {
-    max-width:  45em;
-    width:      35em;
-    z-index:    1001;
+    max-width: 45em;
+    width: 35em;
+    z-index: 1001;
     max-height: 55em;
   }
 
   .search-with-clear {
-    float:    left;
+    float: left;
     position: relative;
 
     #pipeline-search {
@@ -108,15 +111,15 @@
 }
 
 #pipelines .pipelines_selector .enhanced_dropdown .select_all_none_panel {
-  background:    #999 image_url('g9/backgrounds/bg_glass_gradient.png') repeat-x center center;
+  background: #999 image_url("g9/backgrounds/bg_glass_gradient.png") repeat-x center center;
   border-bottom: 1px solid #ccc;
-  padding:       5px;
-  overflow:      hidden;
+  padding: 5px;
+  overflow: hidden;
 
   #select_text {
-    float:       left;
-    padding:     5px 5px 5px 0;
-    color:       #fff;
+    float: left;
+    padding: 5px 5px 5px 0;
+    color: #fff;
     font-weight: bold;
   }
 
@@ -130,22 +133,22 @@
 }
 
 #pipelines .pipelines_selector .enhanced_dropdown .scrollable_panel {
-  width:      auto;
-  max-width:  none;
+  width: auto;
+  max-width: none;
   border-top: 0;
-  padding:    10px;
+  padding: 10px;
 }
 
 #pipelines .pipelines_selector .enhanced_dropdown .selector_group .label {
   font-weight: bold;
-  font-size:   12px;
-  padding:     5px;
-  color:       #333;
+  font-size: 12px;
+  padding: 5px;
+  color: #333;
 }
 
 #pipelines .pipelines_selector .enhanced_dropdown .selector_pipeline .label {
   font-weight: normal;
-  font-size:   1em;
+  font-size: 1em;
   float: left;
   word-break: break-all;
   width: 190px;
@@ -160,15 +163,15 @@
 
 #pipelines .pipelines_selector .enhanced_dropdown .selector_group {
   border-bottom: 1px dotted #ccc;
-  padding:       10px 0 0 5px;
+  padding: 10px 0 0 5px;
 }
 
 .pipeline_bundle div.pipeline {
   background: #fff;
-  float:      left;
+  float: left;
 }
 
-.pipeline_instance .schedule_time span.time{
+.pipeline_instance .schedule_time span.time {
   display: block;
   margin-top: 3px;
 }
@@ -177,14 +180,15 @@
   background: #ff2;
 }
 
-/*start : remove this block once we implement new form style*/
+/* start : remove this block once we implement new form style */
 #material_forms {
   .new_form_label {
-    display:    block;
+    display: block;
     text-align: left;
   }
+
   .inline_instruction {
-    margin: 7px 0px 7px 0px;
+    margin: 7px 0 7px 0;
   }
 
   .new_form_item {
@@ -194,13 +198,15 @@
   .new-admin-subtitle {
     margin-top: 15px;
   }
+
   .new-admin-subtitle span {
     background: #eee;
   }
 
-  .new_form_control > select, .new_form_control > input {
+  .new_form_control > select,
+  .new_form_control > input {
     float: left;
   }
 }
 
-/*end : remove this block once we implement new form style*/
+/* end : remove this block once we implement new form style */
