--- a/server/src/main/webapp/WEB-INF/rails/app/assets/stylesheets/foundation_and_overrides.scss
+++ b/server/src/main/webapp/WEB-INF/rails/app/assets/stylesheets/foundation_and_overrides.scss
@@ -14,9 +14,8 @@
  * limitations under the License.
  */
 @charset 'utf-8';
-
-@import 'settings';
-@import 'foundation-sites/scss/foundation';
+@import "settings";
+@import "foundation-sites/scss/foundation";
 
 // If you'd like to include motion-ui, you need to install the motion-ui sass package.
 //
@@ -32,6 +31,7 @@
 @include foundation-visibility-classes;
 @include foundation-float-classes;
 @include foundation-accordion;
+
 //@include foundation-accordion-menu;
 //@include foundation-badge;
 //@include foundation-breadcrumbs;
@@ -41,10 +41,12 @@
 @include foundation-drilldown-menu;
 @include foundation-dropdown;
 @include foundation-dropdown-menu;
+
 //@include foundation-flex-video;
 //@include foundation-label;
 //@include foundation-media-object;
 @include foundation-menu;
+
 //@include foundation-off-canvas;
 //@include foundation-orbit;
 //@include foundation-pagination;
@@ -55,6 +57,7 @@
 @include foundation-switch;
 @include foundation-table;
 @include foundation-tabs;
+
 //@include foundation-thumbnail;
 @include foundation-title-bar;
 @include foundation-tooltip;
