--- a/server/src/main/webapp/WEB-INF/rails/app/assets/stylesheets/patterns/_tabs.scss
+++ b/server/src/main/webapp/WEB-INF/rails/app/assets/stylesheets/patterns/_tabs.scss
@@ -13,6 +13,7 @@
  * See the License for the specific language governing permissions and
  * limitations under the License.
  */
+
 /**
  * Tabs.css
  */
@@ -23,38 +24,40 @@
  * =SUB_TABS
  */
 
-
 /**
  * =SUB_TABS
 **/
 .sub_tabs_container {
-  background: #999 image_url('g9/backgrounds/overlay_bottom_inside_shadow.png') bottom repeat-x;
+  background: #999 image_url("g9/backgrounds/overlay_bottom_inside_shadow.png") bottom repeat-x;
   border-top-left-radius: 6px;
   border-top-right-radius: 6px;
-    -moz-border-radius-topleft: 6px;
-    -moz-border-radius-topright: 6px;
-    -webkit-border-top-left-radius: 6px;
-    -webkit-border-top-right-radius: 6px;
+  -moz-border-radius-topleft: 6px;
+  -moz-border-radius-topright: 6px;
+  -webkit-border-top-left-radius: 6px;
+  -webkit-border-top-right-radius: 6px;
   border: 0;
   clear: left;
   display: block;
-  list-style-image:none;
-  list-style-position:outside;
-  list-style-type:none;
+  list-style-image: none;
+  list-style-position: outside;
+  list-style-type: none;
   margin-bottom: 10px;
   overflow-y: hidden;
   padding: 10px;
   padding-bottom: 0;
 }
+
 .sub_tabs_container ul {
   float: none;
 }
-.sub_tabs_container li{
+
+.sub_tabs_container li {
   display: block;
   float: left;
   margin-right: 5px;
   padding: 0;
 }
+
 .sub_tabs_container li a {
   background-color: #333;
   border: 0;
@@ -64,28 +67,32 @@
   -moz-border-radius-topright: 4px;
   -webkit-border-top-left-radius: 4px;
   -webkit-border-top-right-radius: 4px;
-  color: #FFF;
+  color: #fff;
   display: block;
   font-size: 11px;
   padding: 7px 12px;
 }
+
 .sub_tabs_container li a:hover {
   background-color: #555;
-  color: #FFF;
+  color: #fff;
 }
+
 .sub_tabs_container .current_tab {
-  background:none;
-  bottom:0;
+  background: none;
+  bottom: 0;
   position: relative;
 }
+
 .sub_tabs_container li.current_tab a,
 .sub_tabs_container li.current_tab a:hover,
 .sub_tabs_container li.current a,
 .sub_tabs_container li.current a:hover {
-  background-color: #FFF;
+  background-color: #fff;
   color: #000;
   font-weight: normal;
 }
-.sub_tab_container{
+
+.sub_tab_container {
   clear: both;
 }
