--- a/server/src/main/webapp/WEB-INF/rails/app/assets/stylesheets/patterns/_wizard_steps.scss
+++ b/server/src/main/webapp/WEB-INF/rails/app/assets/stylesheets/patterns/_wizard_steps.scss
@@ -13,10 +13,10 @@
  * See the License for the specific language governing permissions and
  * limitations under the License.
  */
+
 /**
  * Wizard Steps.css
  */
-
 
 /**
  * TABLE OF CONTENTS
@@ -24,118 +24,115 @@
  * =! NEEDS MIGRATING
  */
 
-
 /**
  * =! NEEDS MIGRATING
  */
 .steps_wrapper .tabs a,
 .steps_wrapper .tabs a.current {
-    -moz-border-radius: 0;
-    -moz-box-shadow: none;
-    margin-right: 36px;
-    margin-top: 3px;
-    margin-left: 24px;
-    padding: 7px 24px 12px 0;
-    font-size: 12px;
-    color: #000;
-    text-align: left;
+  -moz-border-radius: 0;
+  -moz-box-shadow: none;
+  margin-right: 36px;
+  margin-top: 3px;
+  margin-left: 24px;
+  padding: 7px 24px 12px 0;
+  font-size: 12px;
+  color: #000;
+  text-align: left;
 }
 
 .steps_wrapper .tabs a {
-    background: none;
+  background: none;
 }
 
 .steps_wrapper .tabs a:hover {
-    background-color: transparent;
+  background-color: transparent;
 }
 
 .steps_wrapper .tabs .disabled a:hover {
-    background-color: transparent;
-    color: #000;
-    cursor:default;
+  background-color: transparent;
+  color: #000;
+  cursor: default;
 }
 
 .steps_wrapper .tabs li.current_tab a {
-    color: #FFF;
-    background: image_url('g9/step_current.png') bottom left transparent no-repeat;
+  color: #fff;
+  background: image_url("g9/step_current.png") bottom left transparent no-repeat;
 }
 
 .steps_wrapper .tabs a div {
-    font-weight: bold;
+  font-weight: bold;
 }
 
 .steps_wrapper {
-    display: block;
-    background: #666 image_url('g9/backgrounds/bg_gradient_50.png') repeat-x center left !important;
-    -moz-border-radius: 6px;
-    padding:0;
+  display: block;
+  background: #666 image_url("g9/backgrounds/bg_gradient_50.png") repeat-x center left !important;
+  -moz-border-radius: 6px;
+  padding: 0;
 }
 
 .steps_wrapper li {
-    display: inline;
-
-    margin-right: 5px;
+  display: inline;
+  margin-right: 5px;
 }
 
 .steps_wrapper li.view_label,
 .steps_wrapper li a {
-    font-size: 11px;
-    text-decoration: none;
-    display: block;
-    padding: 5px;
+  font-size: 11px;
+  text-decoration: none;
+  display: block;
+  padding: 5px;
 }
 
 .steps_wrapper li.view_label {
-    color: #FFF;
+  color: #fff;
 }
 
 .steps_wrapper li a {
-    padding: 5px 12px;
-    background: #000 image_url('g9/backgrounds/overlay_gradient_30px.png') repeat-x;
-    color: #FFF;
-    -moz-border-radius: 4px;
-    margin-top: 6px;
-
+  padding: 5px 12px;
+  background: #000 image_url("g9/backgrounds/overlay_gradient_30px.png") repeat-x;
+  color: #fff;
+  -moz-border-radius: 4px;
+  margin-top: 6px;
 }
 
 .steps_wrapper li a:hover {
-    background-color: #222;
+  background-color: #222;
 }
 
 .steps_panes {
-    clear: both;
+  clear: both;
 }
 
 .steps_panes .form_content {
-    font-size: 12px;
-
+  font-size: 12px;
 }
 
 .steps_panes .form_content .step_title {
-    font-size: 16px;
+  font-size: 16px;
 }
 
 .steps_panes .form_content .step_instruction {
-    font-size: 14px;
+  font-size: 14px;
 }
 
 .step_answer_choice {
-    float: left;
-    margin: 6px 24px 6px 0;
+  float: left;
+  margin: 6px 24px 6px 0;
 }
 
 .steps_wrapper a.link_as_button span {
-    font-size: 12px;
-    padding: 1px 0;
+  font-size: 12px;
+  padding: 1px 0;
 }
 
-.wizard_form .form_buttons{
+.wizard_form .form_buttons {
   border-radius: 0 0 6px 6px;
-    -moz-border-radius: 0 0 6px 6px;
-    -webkit-border-radius: 0 0 6px 6px;
+  -moz-border-radius: 0 0 6px 6px;
+  -webkit-border-radius: 0 0 6px 6px;
   text-align: right;
   direction: ltr;
 }
+
 .steps_panes .form_buttons {
   text-align: right;
   direction: rtl;
@@ -146,17 +143,15 @@
 **/
 
 .wizard_form .form_content {
-    padding: 15px;
-    height: 350px;
-    overflow:auto;
-    border:1px solid #CCC;
+  padding: 15px;
+  height: 350px;
+  overflow: auto;
+  border: 1px solid #ccc;
 }
-
 
 .steps_panes .step_number {
   display: none;
 }
-
 
 /**
  * =SINGLE_ERROR_PAGE
