--- a/server/src/main/webapp/WEB-INF/rails/app/assets/stylesheets/views/_comparison.scss
+++ b/server/src/main/webapp/WEB-INF/rails/app/assets/stylesheets/views/_comparison.scss
@@ -18,9 +18,11 @@
   font-size: 11px;
   margin: 10px;
 }
+
 .compare_search_instructions p {
   margin-top: 5px;
 }
+
 .compare_search_instructions p:first-child {
   margin-top: 0;
 }
@@ -33,21 +35,25 @@
   height: 360px;
   overflow: hidden;
 }
+
 .modal_timeline .results .time_list {
-  background: #DDD;
-  border-right: 1px solid #CCC;
+  background: #ddd;
+  border-right: 1px solid #ccc;
   float: left;
   height: 360px;
   width: 30px;
 }
+
 .modal_timeline .results .time_list ul {
   float: none;
   margin-top: 2px;
 }
+
 .modal_timeline .results .time_list li {
   float: none;
   width: 100%;
 }
+
 .modal_timeline .results .time_list li a {
   color: #999;
   display: block;
@@ -56,17 +62,20 @@
   padding: 3px;
   width: 100%;
 }
+
 .modal_timeline .results .time_list li a:hover {
-  background-color:#E3F0F3;
+  background-color: #e3f0f3;
   display: block;
 }
+
 .modal_timeline .results .time_list li.selected a {
   background: #666;
-  color: #EEE;
+  color: #eee;
   font-size: 12px;
 }
+
 .modal_timeline .results .pipeline_instance_list {
-  background-color: #EEE;
+  background-color: #eee;
   display: block;
   float: left;
   height: 360px;
@@ -75,18 +84,21 @@
   top: 0;
   width: 235px;
 }
+
 .modal_timeline .results .pipeline_instance_list .time_heading {
   background-color: #666;
-  color: #EEE;
+  color: #eee;
   font-size: 10px;
   margin: 5px 0;
   padding: 2px 7px;
   width: 80%;
 }
+
 .modal_timeline .results .pipeline_instance_list ul {
   float: none;
   margin-top: 5px;
 }
+
 .modal_timeline .results .pipeline_instance_list li {
   border-left: 0;
   border-right: 0;
@@ -94,24 +106,27 @@
   display: list-item;
   float: none;
   width: 100%;
-  padding:4px 0 8px 0;
+  padding: 4px 0 8px 0;
 }
-*+html .modal_timeline .results .pipeline_instance_list li {
+
+* + html .modal_timeline .results .pipeline_instance_list li {
   margin-top: -3px;
 }
+
 .modal_timeline .results .pipeline_instance_list li:hover {
-  background: #C5D9E0;
+  background: #c5d9e0;
 }
+
 .modal_timeline .results .pipeline_instance_list li.selected {
-  background-color: #FFF;
+  background-color: #fff;
   z-index: 9999;
   margin-right: -2px;
   padding-right: 2px;
   box-shadow: -5px 0 5px #bbb;
-    -moz-box-shadow: -5px 0 5px #BBB;
-    -webkit-box-shadow: -5px 0 5px #BBB;
-
+  -moz-box-shadow: -5px 0 5px #bbb;
+  -webkit-box-shadow: -5px 0 5px #bbb;
 }
+
 .modal_timeline .results .pipeline_instance_list li .pipeline_label,
 .modal_timeline .results .pipeline_instance_list li .pipeline_label_truncated {
   display: inline;
@@ -122,53 +137,63 @@
   margin-top: 6px;
   font-size: 12px;
 }
+
 .modal_timeline .results .pipeline_instance_list li .pipeline_label {
   max-width: 100px;
   width: auto;
 }
+
 .modal_timeline .results .pipeline_instance_list li .pipeline,
 .modal_timeline .results .pipeline_instance_list li .pipeline .stages {
   display: inline;
   width: 120px;
 }
+
 .modal_timeline .results .pipeline_instance_list li .pipeline .stages .stage {
   position: static;
 }
+
 .modal_timeline .results .pipeline_instance_list li .pipeline .stages .stage_bar {
   margin-top: 7px;
   margin-right: 2px;
 }
+
 .modal_timeline .results .pipeline_instance_list .pagination {
   bottom: 12px;
   left: 6px;
   position: absolute;
   width: 215px;
 }
-.modal_timeline .results .pipeline_instance_details{
+
+.modal_timeline .results .pipeline_instance_details {
   height: 286px;
   overflow: auto;
   padding: 5px 12px 24px 12px;
-  border-left: 1px solid #AAA;
+  border-left: 1px solid #aaa;
 }
+
 .modal_timeline .results .pipeline_instance_details table {
   width: 80%;
 }
 
 .modal_timeline .results .actions {
-    border-left: 1px solid #AAA;
-}
-.modal_timeline .results .actions a{
-  float: left;
-}
-.modal_timeline .form_buttons button,
-.modal_timeline  .form_buttons a.link_as_button {
-  height: auto;
-}
-.modal_timeline .spinny {
-   margin-left: 100px;
-   margin-top: 10px;
+  border-left: 1px solid #aaa;
 }
 
-.pipeline_instance_details .stage_bar_wrapper a{
-    cursor: default;
+.modal_timeline .results .actions a {
+  float: left;
+}
+
+.modal_timeline .form_buttons button,
+.modal_timeline .form_buttons a.link_as_button {
+  height: auto;
+}
+
+.modal_timeline .spinny {
+  margin-left: 100px;
+  margin-top: 10px;
+}
+
+.pipeline_instance_details .stage_bar_wrapper a {
+  cursor: default;
 }
