--- a/server/src/main/webapp/WEB-INF/rails/app/assets/stylesheets/vm/_jef_override_for_old_ui.scss
+++ b/server/src/main/webapp/WEB-INF/rails/app/assets/stylesheets/vm/_jef_override_for_old_ui.scss
@@ -14,121 +14,107 @@
  * limitations under the License.
  */
 * {
-    font-size: 12px;
+  font-size: 12px;
 }
 
 #yui-main {
-    min-width: 900px;
+  min-width: 900px;
 }
 
 #yui-main .content_wrapper_outer,
-#yui-main .content_wrapper_inner  {
-    margin: 0;
-    padding: 0;
+#yui-main .content_wrapper_inner {
+  margin: 0;
+  padding: 0;
 }
 
 a {
-    color: #1f66bd;
+  color: #1f66bd;
 }
 
 /* remove padding and margin for background */
 
-
-
-
 /* old velocity stuff */
 #bd {
-    padding: 0;
-    margin: 0;
-    font-size: 11px;
-    line-height: 125%;
-    background-color: transparent;
-    padding-top: 91px;
+  padding: 0;
+  margin: 0;
+  font-size: 11px;
+  line-height: 125%;
+  background-color: transparent;
+  padding-top: 91px;
 }
 
 /* fix typography */
-
-
 
 /*
  * fake to get the header inside the rounded white box
  */
 
-
 /*
  * Application Navigation
  */
 
-
-
-
-
 /* new page header */
-
-
 
 /*
  * kill rounded corner graphics and other cruft
  */
 
-.c1, .c2, .c3, .c4 {
-    display: none !important;
+.c1,
+.c2,
+.c3,
+.c4 {
+  display: none !important;
 }
+
 .rounded-corner-grey-border,
 .rounded-corner-for-body,
 .rounded-corner-for-pipeline,
 .rounded-corner-for-pipe-conf,
 .rounded-corner-for-pipe-conf-stage,
 .rounded-corner-for-tab-container {
-    margin: 0;
-    border: 0;
-    padding: 0;
-    background-color: transparent;
+  margin: 0;
+  border: 0;
+  padding: 0;
+  background-color: transparent;
 }
 
 /*
  * build the rounded white box.
  */
 
-
 #yui-main {
-    margin: 0;
+  margin: 0;
 }
 
-.container-in-body{
+.container-in-body {
   border: 0;
-
   position: relative;
   top: 0;
   left: 0;
   padding: 0 15px 15px 15px;
   margin: 0;
-
 }
+
 .admin-rounded-container, /* admin section; new class just for this baby */
 #yui-main .content_wrapper_inner,
 .my-cruise-rounded-container,
 #server-page .rounded-corner-for-pipeline {
-    border: 0;
-    background-color: #FFF;
-    padding: 0 15px 15px 15px;
+  border: 0;
+  background-color: #fff;
+  padding: 0 15px 15px 15px;
 }
-
 
 .admin-rounded-container,
 .my-cruise-rounded-container,
 #server-page .rounded-corner-for-pipeline {
-    padding-top: 15px;
+  padding-top: 15px;
 }
 
 #yui-main .content_wrapper_inner {
-    padding: 15px;
+  padding: 15px;
 }
 
-
-
 /* fake h2 for my cruise */
-
 
 .wizard h1,
 .wizard h1 strong,
@@ -136,178 +122,162 @@ a {
 #tab-content-of-source-xml h1 span,
 #my-cruise-page .sub_tab_container_content .wizard h1,
 #server-page h1 {
-    background-color: transparent;
-    color: #3F2559;
-    font-weight: 300;
-    margin-bottom: 10px;
-    font-size: 21px;
-    color:#3F2559;
-    margin-bottom:10px;
-    padding-bottom: 0;
+  background-color: transparent;
+  color: #3f2559;
+  font-weight: 300;
+  margin-bottom: 10px;
+  font-size: 21px;
+  color: #3f2559;
+  margin-bottom: 10px;
+  padding-bottom: 0;
 }
-
 
 #my-cruise-page .sub_tab_container_content .wizard h1 strong {
-    font-weight: inherit;
-    font-size: inherit;
+  font-weight: inherit;
+  font-size: inherit;
 }
-
 
 /*
  * Global Pass/Fail colors and pipeline details
  */
 
-
+ol#pipelines {
+  border: 1px solid #ccc;
+  background-color: #eee;
+  float: right;
+  max-width: 250px;
+  min-width: 250px;
+  padding: 15px;
+  margin-left: 10px;
+  -moz-border-radius: 5px;
+  -webkit-border-radius: 5px;
+  border-radius: 5px;
+  -moz-box-shadow: inset 0 0 8px #ddd;
+  -webkit-box-shadow: inset 0 0 8px #ddd;
+  box-shadow: inset 0 0 8px #ddd;
+}
 
 ol#pipelines {
-    border: 1px solid #ccc;
-    background-color: #eee;
-    float:right;
-    max-width:250px;
-    min-width:250px;
-    padding:15px;
-    margin-left: 10px;
-    -moz-border-radius: 5px;
-    -webkit-border-radius: 5px;
-    border-radius: 5px;
-    -moz-box-shadow: inset 0 0 8px #ddd;
-    -webkit-box-shadow:inset 0 0 8px #ddd;
-    box-shadow:inset 0 0 8px #ddd;
+  float: left;
+  overflow: hidden;
+  width: 200px;
+  min-width: 200px;
+  margin-left: 0;
+  margin-right: 0;
 }
-
-ol#pipelines  {
-    float:left;
-    overflow:hidden;
-    width:200px;
-    min-width: 200px;
-    margin-left: 0;
-    margin-right: 0;
-}
-
-
 
 /**
  * Jobs
  */
 
-
-
-
-
-
-
-
 /*
  * Warning icon
  */
-
-
 
 /*
  * Admin
  */
 
-
-
 .build h4 {
-    background-position: center;
-    padding: 0.25em 1em 0.25em 25px;
-    padding-left: 35px;
-    font-weight: bold;
-    border-bottom: 1px solid white;
+  background-position: center;
+  padding: 0.25em 1em 0.25em 25px;
+  padding-left: 35px;
+  font-weight: bold;
+  border-bottom: 1px solid white;
 }
+
 .build h4 a {
-    font-weight: normal;
-    /*text-decoration: underline;*/
+  font-weight: normal;
+
+  /* text-decoration: underline; */
 }
 
-
-/*- Menu Tabs B--------------------------- */
+/* - Menu Tabs B--------------------------- */
 
 .sub_tab_container_menu {
-    display: block;
-/* IE hack: remove the extra white space between tab & content */
-    zoom: 1;
-}
+  display: block;
 
+  /* IE hack: remove the extra white space between tab & content */
+  zoom: 1;
+}
 
 .sub-tabs-container {
-    list-style: none;
-    padding-top: 1em;
+  list-style: none;
+  padding-top: 1em;
 }
 
-.sub-tabs-container{
-    background: #999 image_url('g9/backgrounds/overlay_bottom_inside_shadow.png') bottom repeat-x !important;
-    border: 0 !important;
-    padding: 10px;
-    padding-bottom: 0;
-    margin-bottom: 10px !important;
-    -moz-border-radius-topright: 6px;
-    -moz-border-radius-topleft: 6px;
-    -webkit-border-top-right-radius: 6px;
-    -webkit-border-top-left-radius: 6px;
-    border-top-right-radius: 6px;
-    border-top-left-radius: 6px;
+.sub-tabs-container {
+  background: #999 image_url("g9/backgrounds/overlay_bottom_inside_shadow.png") bottom repeat-x !important;
+  border: 0 !important;
+  padding: 10px;
+  padding-bottom: 0;
+  margin-bottom: 10px !important;
+  -moz-border-radius-topright: 6px;
+  -moz-border-radius-topleft: 6px;
+  -webkit-border-top-right-radius: 6px;
+  -webkit-border-top-left-radius: 6px;
+  border-top-right-radius: 6px;
+  border-top-left-radius: 6px;
 }
 
 .sub-tabs-container ul {
-    overflow: hidden;
+  overflow: hidden;
 }
 
 .sub-tabs-container li {
-    display: block;
-    float: left;
-    margin-right: 5px;
-    padding: 0;
+  display: block;
+  float: left;
+  margin-right: 5px;
+  padding: 0;
 }
 
 .sub-tabs-container .current_tab {
-    background:none !important;
-    bottom:0;
-    position: relative;
+  background: none !important;
+  bottom: 0;
+  position: relative;
 }
 
 .sub-tabs-container li a {
-    font-size: 11px;
-    padding: 7px 12px;
-    display: block;
-    border: 0 !important;
-    background-color: #333;
-    color: #fff;
-    -moz-border-radius-topright: 4px;
-    -moz-border-radius-topleft: 4px;
-    -webkit-border-top-right-radius: 4px;
-    -webkit-border-top-left-radius: 4px;
-    border-top-right-radius: 4px;
-    border-top-left-radius: 4px;
+  font-size: 11px;
+  padding: 7px 12px;
+  display: block;
+  border: 0 !important;
+  background-color: #333;
+  color: #fff;
+  -moz-border-radius-topright: 4px;
+  -moz-border-radius-topleft: 4px;
+  -webkit-border-top-right-radius: 4px;
+  -webkit-border-top-left-radius: 4px;
+  border-top-right-radius: 4px;
+  border-top-left-radius: 4px;
 }
 
 .sub-tabs-container li a:hover {
-    background-color: #555;
-    color: #fff;
+  background-color: #555;
+  color: #fff;
 }
-
 
 .sub-tabs-container li.current_tab a,
 .sub-tabs-container li.current_tab a:hover {
-    background-color: #fff;
-    color: #000;
-    font-weight: normal;
+  background-color: #fff;
+  color: #000;
+  font-weight: normal;
 }
-
 
 .sub-tabs-container li.updated a {
-    background: transparent image_url('icon-12-alert.png') no-repeat 100% 50%;
+  background: transparent image_url("icon-12-alert.png") no-repeat 100% 50%;
 }
 
-#yui-main h1, h2, h3, h4 {
-    font-family: "Open Sans", "Helvetica Neue", Helvetica, Roboto, Arial, sans-serif;
-    font-weight: 500;
+#yui-main h1,
+h2,
+h3,
+h4 {
+  font-family: "Open Sans", "Helvetica Neue", Helvetica, Roboto, Arial, sans-serif;
+  font-weight: 500;
 }
-#yui-main h1, h1 strong{
-    font-size: 2em;
-    font-weight: 400;
+
+#yui-main h1,
+h1 strong {
+  font-size: 2em;
+  font-weight: 400;
 }
-
-
-
